# Nirogidhara-AI-Command-Center

./: .dockerignore  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  nd.md  tailwind.config.ts
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
backend/apps/: _ai_config.py  _id.py
backend/apps/accounts/: admin.py  models.py  permissions.py  serializers.py  (+3 more)
backend/config/: __init__.py  asgi.py  celery.py  routing.py  settings.py  urls.py
backend/tests/: conftest.py  test_agent_runs.py  test_agent_runtime.py  test_ai_config.py  test_audit_signals.py  test_caio_audit_agent.py  test_call_quality_scorer.py  test_calling_team_leader_agent.py  test_ceo_orchestration_agent.py  test_cfo_agent.py  test_customer_success_agent.py  test_data_analyst_agent.py  test_delhivery.py  test_diagnostics_pending_payments.py  test_endpoints.py  test_learning_loop_gate.py  test_meta.py  test_phase10b_payment_reminder_preparer.py  test_phase10c_payment_link_refresh.py  test_phase3c.py  test_phase3d.py  test_phase3e.py  test_phase4a.py  test_phase4b.py  test_phase4c.py  test_phase4d.py  test_phase4e.py  test_phase5a.py  test_phase5b.py  test_phase5c.py  test_phase5d.py  test_phase5e.py  test_phase5e_smoke.py  test_phase5e_smoke_fix2.py  test_phase5e_smoke_fix3.py  test_phase5f_customer_pilot.py  test_phase5f_gate_auto_reply_flag.py  test_phase5f_gate_claim_grounding.py  test_phase5f_gate_controlled_auto_reply.py  test_phase5f_gate_grounded_builder.py  (+55 more)
(+715 files in other folders)
