[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nirogidhara-backend"
version = "0.1.0"
description = "Django + DRF backend for Nirogidhara AI Command Center."
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests", "apps"]
addopts = "-q"
