[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nirogidhara-backend"
version = "0.1.0"
description = "Django + DRF backend for Nirogidhara AI Command Center."
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests", "apps"]
addopts = "-q"
# Phase 4A async Channels consumer tests use ``@pytest.mark.asyncio``.
# ``strict`` mode means non-async tests stay synchronous (default pytest
# behaviour) and only tests with the explicit decorator are driven by
# pytest-asyncio. This keeps every existing sync test unaffected while
# making the async tests run cleanly on VPS.
asyncio_mode = "strict"
